feat: add base support

--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -19,6 +19,7 @@
       const rpcUrls = {
         arbitrum: "https://1rpc.io/arb",
         avalanche: "https://api.avax.network/ext/bc/C/rpc",
+        base: "https://mainnet.base.org",
         bsc: "https://bscrpc.com",
         celo: "https://rpc.ankr.com/celo",
         ethereum: "https://eth.llamarpc.com",
