feat: introduce viem + remove ethers

--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -17,13 +17,13 @@
         celo: "https://rpc.ankr.com/celo",
         ethereum: "https://eth.llamarpc.com",
         fantom: "https://rpc.ftm.tools",
-        optimism: "https://endpoints.omniatech.io/v1/op/mainnet/public",
+        optimism: "https://mainnet.optimism.io",
         polygon: "https://polygon-rpc.com",
       };
 
       // Try other transaction hashes from 0x Exchange Proxy
       // See Exchange Proxy: https://etherscan.io/address/0xdef1c0ded9bec7f1a1670819833240f027b25eff
-      const transactionHash = "0xf4752f8499f62e10218fae55adfa5e4009839900a74f165b80015c1823bacb10";
+      const transactionHash = "0xc772258418e5d73bcf891ef341a42c0d74d8f84beda7f9e8580eacc0d62ba3c7";
 
       async function example() {
         const abiUrl = "https://raw.githubusercontent.com/0xProject/protocol/development/packages/contract-artifacts/artifacts/IZeroEx.json";
