refactor: use utils from viem

--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -39,13 +39,13 @@
       example();
     </script>
   </head>
-  <body style="font-family: monospace; font-size: 18px; padding: 0 24px;">
+  <body style="font-family: monospace; font-size: 20px; padding: 0 24px; background: #222; color: #fff;">
     <h1>0x-parser</h1>
     <p>Open the JavaScript console to see the parsed swap data.</p>
     <p>
       For more info, see the blog post
       <a
-        style="font-weight: bold; font-size: 20px"
+        style="font-weight: semi-bold; font-size: 24px; color: goldenrod;"
         href="https://medium.com/@henballs/0x-parser-parsing-dex-transactions-9f9a6579d489"
         >0x-parser: Parsing DEX Transactions</a
       >.
